--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -4,10 +4,28 @@ on:
   push
 
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.x"
+    - name: Run tests
+      env:
+        PYTHONPATH: src
+      run: python3 -m unittest discover tests/
+
   build:
     name: Build distribution 📦
     runs-on: ubuntu-latest
-
+    needs:
+    - test
     steps:
     - uses: actions/checkout@v4
       with:
@@ -29,23 +47,6 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-
-  test:
-    name: Run tests
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Run tests
-      env:
-        PYTHONPATH: src
-      run: python3 -m unittest discover tests/
 
 
   publish-to-pypi:
